# streamforge

./: .eslintrc.json  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  architecture.mmd  docker-compose.dev.yml  docker-compose.test.yml  package-lock.json  package.json  test-prometheus.yml  turbo.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
.turbo/daemon/: 414409923f88f5fd-turbo.log.2025-07-24
apps/api-gateway/: Dockerfile  go.mod  main.go
apps/api-gateway/config/: config.yaml
apps/api-gateway/internal/config/: config.go
apps/api-gateway/internal/docs/: docs.go
apps/api-gateway/internal/handler/: grpc_handler.go
apps/api-gateway/internal/handlers/: auth.go  handlers.go
apps/api-gateway/internal/middleware/: auth.go  middleware.go
apps/api-gateway/internal/repository/: entities.go  postgres.go  repository.go
apps/api-gateway/internal/routes/: routes.go
apps/api-gateway/internal/service/: service.go
apps/collector/: Dockerfile  go.mod  main.go
apps/collector/config/: config.yaml
apps/collector/internal/collector/: collector.go
apps/collector/internal/config/: config.go
apps/collector/internal/processor/: processor.go
apps/collector/internal/sender/: sender.go
apps/collector/internal/telemetry/: telemetry.go
apps/dashboard/: next.config.js  package.json  tailwind.config.js
apps/dashboard/src/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/src/components/: providers.tsx
apps/dashboard/src/components/dashboard/: alerts-section.tsx  metrics-chart.tsx  metrics-section.tsx  overview-section.tsx  services-section.tsx  system-health-section.tsx
apps/dashboard/src/components/layout/: dashboard-layout.tsx  header.tsx  sidebar.tsx
apps/dashboard/src/components/ui/: card.tsx  error-boundary.tsx  loading-spinner.tsx  metric-card.tsx  system-health-indicator.tsx  toaster.tsx
apps/dashboard/src/hooks/: use-dashboard-data.ts  use-theme.ts
apps/ml-engine/: Dockerfile  main.py  pyproject.toml  requirements.txt
apps/operator/: Dockerfile  go.mod  main.go
apps/operator/config/: config.yaml
apps/operator/internal/config/: config.go
apps/operator/internal/controller/: controller.go
apps/stream-processor/: Cargo.toml
apps/stream-processor/src/: config.rs  kafka.rs  lib.rs  main.rs  metrics.rs  processor.rs  storage.rs
docs/adr/: template.md
infra/docker/: prometheus.yml
infra/terraform/: main.tf
infrastructure/helm/streamforge/: Chart.yaml
infrastructure/kubernetes/: api-gateway.yaml
infrastructure/terraform/: main.tf
proto/streamforge/v1/: api.proto  common.proto  grpc.proto
scripts/: setup-dev.sh
sdk/go/: client.go
sdk/python/streamforge/: __init__.py
sdk/rust/src/: lib.rs
sdk/typescript/src/: index.ts
services/api-gateway/: go.mod  main.go
services/api-gateway/auth/: jwt.go
services/api-gateway/config/: config.go
services/api-gateway/database/: errors.go  models.go  repository.go
services/api-gateway/errors/: errors.go
services/api-gateway/handlers/: alerts.go  auth.go  health.go  health_test.go  logs.go  logs_test.go  metrics.go  metrics_test.go  services.go  traces.go
services/api-gateway/middleware/: auth.go  cors.go  logger.go  logger_test.go  recovery.go  request_id.go
services/api-gateway/utils/: utils.go
services/collector/: main.go
services/ml-engine/: main.py
services/operator/: main.go
services/stream-processor/src/: main.rs
tests/integration/: api-gateway.test.js
tests/performance/: load-test.js
tests/unit/api-gateway/: handlers_test.go
